infra/security/policy/constraints/block-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockUser
metadata:
  name: no-root-allowed
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "crossplane-system", "gatekeeper-system"]
