infra/security/policy/constraints/require-probe.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireProbe
metadata:
  name: require-liveness-probe
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "crossplane-system", "gatekeeper-system", "wazuh"]
